@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-09-09" />
+<meta name="date" content="2010-09-15" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-09-09</td></tr>
+<td>2010-09-15</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.20</td></tr>
 </tbody>
@@ -2989,7 +2989,7 @@ To hide lower priority menu items without having anything show in the menu
 configure with a nothing in the label but at least one character in the command.</p>
 <div class="section">
 <h4><a class="toc-backref" href="#id142" id="substitutions-in-commands-and-working-directories" name="substitutions-in-commands-and-working-directories">Substitutions in Commands and Working Directories</a></h4>
-<p>The first occurance of each of the following character sequences in each of the
+<p>The first occurence of each of the following character sequences in each of the
 command and working directory fields is substituted by the items specified below
 before the command is run.</p>
 <ul class="simple">
@@ -3601,6 +3601,14 @@ enabled for the current document.</td>
 <tr><td>Find Previous</td>
 <td>Ctrl-Shift-G</td>
 <td>Finds previous result.</td>
+</tr>
+<tr><td>Find Next Selection</td>
+<td>&nbsp;</td>
+<td>Finds next occurence of selected text.</td>
+</tr>
+<tr><td>Find Previous Selection</td>
+<td>&nbsp;</td>
+<td>Finds previous occurence of selected text.</td>
 </tr>
 <tr><td>Replace</td>
 <td>Ctrl-H  (C)</td>
@@ -6133,7 +6141,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-09-15 16:58 UTC.
+Generated on: 2010-09-21 16:23 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
